...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A8B-EZ-C9l">
                                <rect key="frame" x="182" y="637" width="50" height="30"/>
                                <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="50" id="6ej-Td-x4K"/>
                                </constraints>
                                <state key="normal" title="Save">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <action selector="saveData:" destination="ft8-cT-QbT" eventType="touchUpInside" id="Bbg-Ra-9yU"/>
                                </connections>
                            </button>
...
            </objects>
            <point key="canvasLocation" x="-1980" y="680"/>
        </scene>
        <!--Food Entry-->
        <scene sceneID="Uda-DG-9we">
            <objects>
                <viewController storyboardIdentifier="FoodEntryController" title="Food Entry" hidesBottomBarWhenPushed="YES" id="Tqp-DL-4GL" customClass="FoodEntryViewController" customModule="NutriSwift" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="4Rf-En-luU">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Meal" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sKx-L0-aGB">
                                <rect key="frame" x="182.66666666666666" y="419" width="48.666666666666657" height="27.666666666666686"/>
...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EaM-ml-AQN">
                                <rect key="frame" x="82" y="159" width="250" height="35"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Huc-WP-pJs">
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="35"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="K7Y-t3-kWm">
...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weight" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cj9-IO-aiv">
                                        <rect key="frame" x="0.0" y="0.0" width="150" height="35"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Weight (g)" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2f6-UO-31y">
                                        <rect key="frame" x="150" y="0.0" width="100" height="35"/>
                                        <constraints>
                                            <constraint firstAttribute="width" constant="100" id="o2p-cc-LBV"/>
                                        </constraints>
                                        <nil key="textColor"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
...
            </objects>
            <point key="canvasLocation" x="-2788.4057971014495" y="1437.2282608695652"/>
        </scene>
        <!--Diary-->
        <scene sceneID="78c-xr-Qur">
            <objects>
                <tableViewController id="aSN-0J-MNX" userLabel="Diary" customClass="DiaryTableViewController" customModule="NutriSwift" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="6Ir-X9-8cm">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="diaryRow" id="1jU-c2-o57" customClass="FoodCell" customModule="NutriSwift" customModuleProvider="target">
...
