...
        return cell
    }
    
    @IBAction func clearAll(_ sender: Any) {
        let alert = UIAlertController(title: "Clear All", message: "Do you really want to clear all food data?", preferredStyle: UIAlertControllerStyle.alert)
        
        alert.addAction(UIAlertAction(title: "Confirm", style: UIAlertActionStyle.default, handler: { (action) in
            alert.dismiss(animated: true, completion: nil)
            FoodModel.sharedInstance.getFoods()
            for food in FoodModel.sharedInstance.foodDBUnsorted {
                FoodModel.sharedInstance.deleteFood(food)
            }
            FoodModel.sharedInstance.getFoods()
...
